# taoistmc

./: .gitignore  README.md  pyproject.toml  task_progress.md
.github/workflows/: docs.yml  pypi.yml  tests.yml
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt
src/taoistmc/: __init__.py  main.py  taoist.py
src/taoistmc/config/: __init__.py  config.py
src/taoistmc/core/: __init__.py  absorber.py  doppler.py  gpu_kernels.py  optical_depth.py  sampler.py  sightline.py  utils.py
src/taoistmc/data/: starter_config.yaml
tests/: conftest.py  test_cli.py  test_config.py  test_optical_depth.py  test_sightline.py  test_taoistmc.py
