[build-system]
# Modern backends include "hatchling.build", "setuptools.build_meta", or "flit_core.buildapi"
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taoistmc"
version = "0.3.0"
description = "Simulator for generating IGM sightlines for LyC studies"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Robert Bassett", email = "rbassett.astro@gmail.com"}
]
dependencies = [
    "requests>=2.28.0",
    "numpy>=1.26.4",
    "pandas>=2.3.0",    
    "pydantic>=2.11.7",
    "scipy>=1.15.3",
    "numba>=0.65.1",
    "joblib>=1.5.3",
    "typer>=0.25.1",
    "PyYAML>=6.0.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "pytest-cov>=4.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "furo>=2024.1",
]

[project.urls]
Homepage = "https://github.com"
Documentation = "https://github.com#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/taoistmc"]

# Hatchling uses artifacts/inclusion patterns
[tool.hatch.build.targets.sdist]
include = [
    "/src/taoistmc",
]

[tool.hatch.build.targets.wheel.shared-data]
"src/taoistmc/data" = "taoistmc/data"

[project.scripts]
taoistmc = "taoistmc.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
